# mutterkey

./: .clang-tidy  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  README.md  RELEASE_CHECKLIST.md  THIRD_PARTY_NOTICES.md  config.example.json  skills-lock.json
.agents/skills/development-contract-core/: SKILL.md
.agents/skills/mutterkey-development-contract/: SKILL.md
.github/workflows/: ci.yml  release-checks.yml
cmake/: run-clang-tidy.cmake  run-clazy.cmake
config/: change-contract-policy.sh
contrib/: mutterkey.service  org.mutterkey.mutterkey.desktop
docs/: Doxyfile.in  mainpage.md  native-cpu-model-staging.md
docs/measurements/: 2026-04-native-cpu-base-en.md
feature_records/: .gitignore  README.md  TEMPLATE.md
feature_records/active/: 2026-04-01-real-cpu-decoder-bring-up.md
feature_records/done/: 2026-04-01-real-cpu-decoder-bring-up.md  2026-04-13-development-contract-system-adoption.md  2026-04-17-native-cpu-byte-level-tokenizer-and-benchmark-evidence.md  2026-04-17-native-cpu-transcript-cleanup-regression-tests.md
feature_records/planned/: 2026-04-01-productize-config-telemetry-distribution.md  2026-04-01-selective-multiplatform-backends.md  2026-04-01-translation-and-language-expansion.md
feature_records/superseded/: fresh-asr-runtime-roadmap.md
scripts/: check-change-contracts.sh  check-release-hygiene.sh  check-test-commentary.sh  run-release-checklist.sh  run-valgrind.sh  set-feature-record-lifecycle.sh  test-change-contracts.sh  test-feature-record-lifecycle.sh  update-whisper.sh
src/: clipboardwriter.cpp  clipboardwriter.h  commanddispatch.cpp  commanddispatch.h  config.cpp  config.h  hotkeymanager.cpp  hotkeymanager.h  main.cpp  service.cpp  service.h  traymain.cpp
src/app/: applicationcommands.cpp  applicationcommands.h
src/asr/legacy/: whispercpptranscriber.cpp  whispercpptranscriber.h
src/asr/model/: modelcatalog.cpp  modelcatalog.h  modelpackage.cpp  modelpackage.h  modelvalidator.cpp  modelvalidator.h  rawwhisperimporter.cpp  rawwhisperimporter.h  rawwhisperprobe.cpp  rawwhisperprobe.h
src/asr/nativecpu/: cpudecoderforward.cpp  cpudecoderforward.h  cpudecodergraph.cpp  cpudecoderruntime.cpp  cpudecoderruntime.h  cpuencoderforward.cpp  cpuencoderforward.h  cpufeatureextractor.cpp  cpugreedysearch.cpp  cpugreedysearch.h  cpumelspectrogram.cpp  cpumelspectrogram.h  cpumodelweights.cpp  cpumodelweights.h  cpureferencemodel.cpp  cpureferencemodel.h  cpureferencetranscriber.cpp  cpureferencetranscriber.h  cpusessionstate.cpp  cpusessionstate.h  cputensor.cpp  cputensor.h  cputimestamps.cpp  cputimestamps.h  cputokenizer.cpp  cputokenizer.h  cputokensearch.cpp  cputokensearch.h  cpuwhispertokenizer.cpp  cpuwhispertokenizer.h
src/asr/runtime/: runtimeselector.cpp  runtimeselector.h  transcriptionengine.cpp  transcriptionengine.h  transcriptionworker.cpp  transcriptionworker.h
src/asr/streaming/: audiochunker.cpp  audiochunker.h  transcriptassembler.cpp  transcriptassembler.h  transcriptioncompat.cpp  transcriptioncompat.h
src/audio/: audiorecorder.cpp  audiorecorder.h  recording.h  recordingnormalizer.cpp  recordingnormalizer.h
src/control/: daemoncontrolclient.cpp  daemoncontrolclient.h  daemoncontrolprotocol.cpp  daemoncontrolprotocol.h  daemoncontrolserver.cpp  daemoncontrolserver.h  daemoncontroltypes.cpp  daemoncontroltypes.h
src/transcription/: audiochunker.cpp  audiochunker.h  cpudecoderforward.cpp  cpudecoderforward.h  cpudecodergraph.cpp  cpudecodergraph.h  cpudecoderruntime.cpp  cpudecoderruntime.h  cpuencoderforward.cpp  cpuencoderforward.h  cpufeatureextractor.cpp  cpufeatureextractor.h  cpugreedysearch.cpp  cpugreedysearch.h  cpumelspectrogram.cpp  cpumelspectrogram.h  cpumodelweights.cpp  cpumodelweights.h  cpureferencemodel.cpp  cpureferencemodel.h  cpureferencetranscriber.cpp  cpureferencetranscriber.h  cpusessionstate.cpp  cpusessionstate.h  cputensor.cpp  cputimestamps.cpp  cputimestamps.h  cputokenizer.cpp  cputokensearch.cpp  cputokensearch.h  cpuwhispertokenizer.cpp  cpuwhispertokenizer.h  modelcatalog.cpp  modelcatalog.h  modelpackage.cpp  modelpackage.h  modelvalidator.cpp  modelvalidator.h  rawwhisperimporter.cpp  rawwhisperimporter.h  (+15 more)
src/tray/: traystatuswindow.cpp  traystatuswindow.h
tests/: CMakeLists.txt  commanddispatchtest.cpp  configtest.cpp  cpudecoderruntimetest.cpp  cpumelspectrogramtest.cpp  cpurealdecodertest.cpp  cpureferencetranscribertest.cpp  cputensortest.cpp  cpuwhisperparitytest.cpp  cpuwhispertokenizertest.cpp  daemoncontrolclientservertest.cpp  daemoncontrolprotocoltest.cpp  daemoncontroltypestest.cpp  modelpackagetest.cpp  platformlogicstest.cpp  recordingnormalizertest.cpp  streamingtranscriptiontest.cpp  transcriptionworkertest.cpp  traystatuswindowtest.cpp  whispercpptranscribertest.cpp
tests/fixtures/change_contracts/: high_risk_self_validation_requires_approver.md  impact_requires_evidence.md  invalid_uncertainty.md  mismatched_directory_state.md  missing_contract_section.md  missing_evidence_state.md  missing_plan_for_substantive_change.md  missing_verification_commands.md  missing_verifier.md  self_validation_with_waiver.md  self_validation_without_waiver.md  superseded_requires_pointer.md  valid_contract.md  waived_without_rationale.md
tests/testutil/: pcmwavreader.cpp  pcmwavreader.h
tools/: convert_safetensors_to_mkcpur3.py  stage_native_package.py
tools/nativecpubench/: CMakeLists.txt  main.cpp
